--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-
     <style
         name="Theme.Uiandroidnewsapp"
         parent="android:Theme.Material.Light.NoActionBar">
 
-<!--        <item name="android:navigationBarColor">-->
-<!--            @android:color/transparent-->
-<!--        </item>-->
-
-<!--        <item name="android:statusBarColor">-->
-<!--            @android:color/transparent-->
-<!--        </item>-->
-
-<!--        <item name="android:windowLightStatusBar">-->
-<!--            true-->
-<!--        </item>-->
+        <item name="android:windowSplashScreenBackground">@color/beige</item>
     </style>
 </resources>
